# kostil-engine

./: CMakeLists.txt  README.md  run.sh
source/: main.cpp
